--- a/index.html
+++ b/index.html
@@ -2,27 +2,32 @@
     <head>
         <title>Log in</title>
         <link rel="stylesheet" href="styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     </head>
     <body>
-    <div id="container">
-        <div id="imgContainer">
-
+        <div id="headerContainer">
+            <header>Brandon James Little portfolio login page</header>
+            <img src="Person-sitting-in-front-of-monitors.svg" alt="Man sitting in front of six screens">
         </div>
-        <div id="loginContainer">
-            <form action="" method = "GET">
-                <label for="Name" > 
-                    Name:
-                    <input id = "Name" name = "Name" type="text" placeholder="John" required>
-                </label>
-                <label for="Password">
-                    Password: 
+        <div id="container">
+            <div id="loginContainer">
+                <h2>Welcome!</h2>
+                <form action="" method = "GET">
+                    <label for="Name" > 
+                        Name 
+                    </label> 
+                    <input id = "Name" name = "Name" type="text" required>
+                    <label for="Password">
+                        Password
+                    </label>
                     <input id = "Password" name = "Password" type="password" required>
-                </label>
-                <button type="reset">Clear fields</button>
-                <button type="submit">Log In</button>
-            </form>
-        </div>
-    </div>        
+                    <div id="buttonContainer">
+                        <button type="submit">Login</button>
+                        <button type="reset">Clear fields</button>
+                    </div>
+                </form>
+            </div>
+        </div>        
         <script src="scripts.js"></script>
     </body>
 </html>
