--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
         <div id="container">
             <div id="loginContainer">
                 <h2>Welcome!</h2>
-                <form action="" method = "GET">
-                    <label for="Name" > 
+                <form id = "Form" action="" method = "GET">
+                    <label id = "nameLabel" for="Name" > 
                         Name 
                     </label> 
-                    <input id = "Name" name = "Name" type="text" required>
-                    <label for="Password">
+                    <input id = "Name" name = "Name" type="text">
+                    <label id = "passwordLabel" for="Password">
                         Password
                     </label>
-                    <input id = "Password" name = "Password" type="password" required>
+                    <input id = "Password" name = "Password" type="password">
                     <div id="buttonContainer">
                         <button type="submit">Login</button>
                         <button type="reset">Clear fields</button>
                     </div>
+                    <p id = "errorContainer"></p>
                 </form>
             </div>
         </div>        
