Added minor adjustments to text guidance on HTML for password criteria and slight amends to other docs.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="container">
             <div id="loginContainer">
                 <h2>Welcome!</h2>
+                <p>Please enter your name and a password <br> between 8 and 20 characters long.</p>
                 <form id = "Form" action="" method = "GET">
                     <label id = "nameLabel" for="Name" > 
                         Name 
