--- a/portal.html
+++ b/portal.html
@@ -12,10 +12,10 @@
 
         <div id="navContainer">
             <ul>
-                <li><a href="">About me</a></li>
-                <li><a href="">Skills</a></li>
-                <li><a href="">Projects</a></li>
-                <li><a href="">Contact me</a></li>
+                <li><a href="#About">About me</a></li>
+                <li><a href="#Skills">Skills</a></li>
+                <li><a href="#Projects">Projects</a></li>
+                <li><a href="#Contact">Contact me</a></li>
             </ul>
         </div>
 
@@ -28,22 +28,22 @@
             </div>
 
             <div class="h2Container">
-                <h2>About</h2>
+                <h2 id ="About">About</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta at deleniti sit alias asperiores accusantium, placeat tempore eligendi cupiditate consequuntur! A aut vero pariatur excepturi repudiandae exercitationem atque quas possimus eius, officia accusantium deserunt at dolor fugit commodi laboriosam? Id ullam, repellendus accusantium harum est voluptate sint provident magnam tenetur?</p>
             </div>
 
             <div class="h2Container">
-                <h2>Skills</h2>
+                <h2 id = "Skills">Skills</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta at deleniti sit alias asperiores accusantium, placeat tempore eligendi cupiditate consequuntur! A aut vero pariatur excepturi repudiandae exercitationem atque quas possimus eius, officia accusantium deserunt at dolor fugit commodi laboriosam? Id ullam, repellendus accusantium harum est voluptate sint provident magnam tenetur?</p>
             </div>
 
             <div class="h2Container">
-                <h2>Projects</h2>
+                <h2 id = "Projects">Projects</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta at deleniti sit alias asperiores accusantium, placeat tempore eligendi cupiditate consequuntur! A aut vero pariatur excepturi repudiandae exercitationem atque quas possimus eius, officia accusantium deserunt at dolor fugit commodi laboriosam? Id ullam, repellendus accusantium harum est voluptate sint provident magnam tenetur?</p>
             </div>
 
             <div class="h2Container">
-                <h2>Contact me</h2>
+                <h2 id = "Contact">Contact me</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta at deleniti sit alias asperiores accusantium, placeat tempore eligendi cupiditate consequuntur! A aut vero pariatur excepturi repudiandae exercitationem atque quas possimus eius, officia accusantium deserunt at dolor fugit commodi laboriosam? Id ullam, repellendus accusantium harum est voluptate sint provident magnam tenetur?</p>
             </div>
         </div>
