I started the CSS grid for the skills area of the protal.

--- a/portal.html
+++ b/portal.html
@@ -21,8 +21,6 @@
 
         <div id="fullContainer">
     
-            
-
             <div id="introContainer">
                 <h1>Intro Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat officia dolorem nam quis doloribus. Deserunt laboriosam aspernatur exercitationem</h2>
             </div>
@@ -34,7 +32,25 @@
 
             <div class="h2Container">
                 <h2 id = "Skills">Skills</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta at deleniti sit alias asperiores accusantium, placeat tempore eligendi cupiditate consequuntur! A aut vero pariatur excepturi repudiandae exercitationem atque quas possimus eius, officia accusantium deserunt at dolor fugit commodi laboriosam? Id ullam, repellendus accusantium harum est voluptate sint provident magnam tenetur?</p>
+                <p>Click on any of the skills below to read more!</p>
+                <div id="skillsContainer">
+                    <div id = "divComms">
+                        <h3 id = "commsSkill">Comms</h3>
+                        <!-- <p id = "commsSkillPara"></p> -->
+                    </div>
+                    <div id = "divProgramming">
+                        <h3 id = "programmingSkill">Programming</h3>
+                        <!-- <p id = "programmingSkillPara"></p> -->
+                    </div>
+                    <div id = "divProblemSolving">
+                        <h3 id = "problemSolvSkill">Problem Solving</h3>
+                        <!-- <p id = "problemSolvSkillPara"></p> -->
+                    </div>
+                    <div id = "divTimeManagement">
+                        <h3 id = "timeManageSkill">Time Management and Organisation</h3>
+                        <!-- <p></p> -->
+                    </div>
+                </div>
             </div>
 
             <div class="h2Container">
