Added the portal JavaScript in another file to stop code clashes and added skills click event listeners to add and remove text. I added more styles and tidied the HTML while adding some information to the readme that I will finalise later.

--- a/portal.html
+++ b/portal.html
@@ -34,21 +34,23 @@
                 <h2 id = "Skills">Skills</h2>
                 <p>Click on any of the skills below to read more!</p>
                 <div id="skillsContainer">
-                    <div id = "divComms">
-                        <h3 id = "commsSkill">Comms</h3>
-                        <!-- <p id = "commsSkillPara"></p> -->
+                    <div id = "divComms" class = "divSkill">
+                        <h3 id = "commsSkill">Communication</h3>
                     </div>
-                    <div id = "divProgramming">
+                    <div id = "divProgramming" class = "divSkill">
                         <h3 id = "programmingSkill">Programming</h3>
-                        <!-- <p id = "programmingSkillPara"></p> -->
                     </div>
-                    <div id = "divProblemSolving">
+                    <div id = "divInitiative" class = "divSkill">
+                        <h3 id = "initiativeSkill">Initiative</h3>
+                    </div>
+                    <div id = "divLeadership" class = "divSkill">
+                        <h3 id = "leadershipSkill">Leadership</h3>
+                    </div>
+                    <div id = "divProblemSolving" class = "divSkill">
                         <h3 id = "problemSolvSkill">Problem Solving</h3>
-                        <!-- <p id = "problemSolvSkillPara"></p> -->
                     </div>
-                    <div id = "divTimeManagement">
+                    <div id = "divTimeManagement" class = "divSkill">
                         <h3 id = "timeManageSkill">Time Management and Organisation</h3>
-                        <!-- <p></p> -->
                     </div>
                 </div>
             </div>
@@ -63,6 +65,6 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta at deleniti sit alias asperiores accusantium, placeat tempore eligendi cupiditate consequuntur! A aut vero pariatur excepturi repudiandae exercitationem atque quas possimus eius, officia accusantium deserunt at dolor fugit commodi laboriosam? Id ullam, repellendus accusantium harum est voluptate sint provident magnam tenetur?</p>
             </div>
         </div>
-        <script src="scripts.js" ></script>
+        <script src="portal.js" async></script>
     </body>
 </html>
