--- a/portal.html
+++ b/portal.html
@@ -14,6 +14,7 @@
             <ul>
                 <li><a href="#About">About me</a></li>
                 <li><a href="#Skills">Skills</a></li>
+                <li><a href="#Languages">Languages</a></li>
                 <li><a href="#Projects">Projects</a></li>
                 <li><a href="#Contact">Contact me</a></li>
             </ul>
@@ -27,7 +28,7 @@
 
             <div class="h2Container">
                 <h2 id ="About">About</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta at deleniti sit alias asperiores accusantium, placeat tempore eligendi cupiditate consequuntur! A aut vero pariatur excepturi repudiandae exercitationem atque quas possimus eius, officia accusantium deserunt at dolor fugit commodi laboriosam? Id ullam, repellendus accusantium harum est voluptate sint provident magnam tenetur?</p>
+                <p>I am an organised professional with two years’ experience in an office environment, delivering high quality campaigns and projects as part of a Marketing team. This enabled me to develop a range of skills such as adaptability and continuous improvement. I am a curious individual with a strong ambition to learn new things.</p>
             </div>
 
             <div class="h2Container">
@@ -56,6 +57,14 @@
             </div>
 
             <div class="h2Container">
+                <h2 id = "Languages">Languages</h2>
+                <div id="langWrapper">
+
+                </div>
+            </div>
+
+
+            <div class="h2Container">
                 <h2 id = "Projects">Projects</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta at deleniti sit alias asperiores accusantium, placeat tempore eligendi cupiditate consequuntur! A aut vero pariatur excepturi repudiandae exercitationem atque quas possimus eius, officia accusantium deserunt at dolor fugit commodi laboriosam? Id ullam, repellendus accusantium harum est voluptate sint provident magnam tenetur?</p>
             </div>
@@ -65,6 +74,12 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta at deleniti sit alias asperiores accusantium, placeat tempore eligendi cupiditate consequuntur! A aut vero pariatur excepturi repudiandae exercitationem atque quas possimus eius, officia accusantium deserunt at dolor fugit commodi laboriosam? Id ullam, repellendus accusantium harum est voluptate sint provident magnam tenetur?</p>
             </div>
         </div>
+
+
+        <footer>
+
+        </footer>
+
         <script src="portal.js" async></script>
     </body>
 </html>
