Fixed positioning and class names for the languages carousel.

--- a/portal.html
+++ b/portal.html
@@ -65,7 +65,7 @@
                                 <
                             </div>
                             <ul class="carouselTrack">
-                                <li class="carouselSlide">
+                                <li class="carouselSlide currentCarouselSlide">
                                     <p>JavaScript</p>
                                     <i class="fab fa-js-square fa-7x"></i>
                                 </li>
@@ -84,9 +84,9 @@
                         </div>
                 </div>
                 <div class="carouselNav">
-                    <button class="cNavIndicators currentSlide"></button>
-                    <button class="cNavIndicators"></button>
-                    <button class="cNavIndicators"></button>
+                    <button class="carouselNavCircles currentSlideCircle"></button>
+                    <button class="carouselNavCircles"></button>
+                    <button class="carouselNavCircles"></button>
                 </div>
             </div>
 
