I added the JavaScript for functionality to move along the carousel when you click the left or right button and it also moves the darker circle in line with the carousel movements. Also some changes to the README, CSS and HTML.

--- a/portal.html
+++ b/portal.html
@@ -58,35 +58,35 @@
             </div>
 
             <div class="h2Container">
-                <h2 id = "Languages">Languages</h2>
+                <h2 id = "Languages">Programming/Scripting Languages</h2>
                 <div id="langWrapper">
                         <div class="carouselContainer">
-                            <div class="carouselButton">
+                            <div class="carouselButton" id = "leftArrow">
                                 <
                             </div>
                             <ul class="carouselTrack">
-                                <li class="carouselSlide currentCarouselSlide">
+                                <li class="carouselSlide currentCarouselSlide" id = "javascript">
                                     <p>JavaScript</p>
                                     <i class="fab fa-js-square fa-7x"></i>
                                 </li>
-                                <li class="carouselSlide">
+                                <li class="carouselSlide" id = "html">
                                     <p>HTML</p>
                                     <i class="fab fa-html5 fa-7x"></i>
                                 </li>
-                                <li class="carouselSlide">
+                                <li class="carouselSlide" id = "css">
                                     <p>CSS</p>
                                     <i class="fab fa-css3-alt fa-7x"></i>
                                 </li>
                             </ul>
-                            <div class="carouselButton">
+                            <div class="carouselButton" id = "rightArrow">
                                 >
                             </div>
                         </div>
                 </div>
                 <div class="carouselNav">
-                    <button class="carouselNavCircles currentSlideCircle"></button>
-                    <button class="carouselNavCircles"></button>
-                    <button class="carouselNavCircles"></button>
+                    <button class="carouselNavCircles currentSlideCircle" id = "circle1"></button>
+                    <button class="carouselNavCircles" id = "circle2"></button>
+                    <button class="carouselNavCircles" id = "circle3"></button>
                 </div>
             </div>
 
