Started to fill out content in HTML. Started to improve layout of the skills grid to improve look in CSS.

--- a/portal.html
+++ b/portal.html
@@ -13,23 +13,23 @@
 
         <div id="navContainer">
             <ul id = ulNav>
-                <li class = "liNav"><a href="#About">About me</a></li>
-                <li class = "liNav"><a href="#Skills">Skills</a></li>
-                <li class = "liNav"><a href="#Languages">Languages</a></li>
-                <li class = "liNav"><a href="#Projects">Projects</a></li>
-                <li class = "liNav"><a href="#Contact">Contact me</a></li>
+                <li class = "liNav"><a class="navLink" href="#About">About me</a></li>
+                <li class = "liNav"><a class="navLink" href="#Skills">Skills</a></li>
+                <li class = "liNav"><a class="navLink" href="#Languages">Languages</a></li>
+                <li class = "liNav"><a class="navLink" href="#Projects">Projects</a></li>
+                <li class = "liNav"><a class="navLink" href="#Contact">Contact me</a></li>
             </ul>
         </div>
 
         <div id="fullContainer">
     
             <div id="introContainer">
-                <h1>Intro Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat officia dolorem nam quis doloribus. Deserunt laboriosam aspernatur exercitationem</h2>
+                <h1>Welcome to my website! This is intended to show off my new skills as a self taught developer. I have created this website from scratch and intend to keep expanding it.</h2>
             </div>
 
             <div class="h2Container">
                 <h2 id ="About">About</h2>
-                <p>I am an organised professional with two years’ experience in an office environment, delivering high quality campaigns and projects as part of a Marketing team. This enabled me to develop a range of skills such as adaptability and continuous improvement. I am a curious individual with a strong ambition to learn new things.</p>
+                <p>I am an organised professional with two years’ experience in an office environment, delivering high quality campaigns and projects as part of a Marketing team. This enabled me to develop a range of skills such as adaptability, continuous improvement and more! I am a curious individual with a strong ambition to learn new things.</p>
             </div>
 
             <div class="h2Container">
@@ -90,15 +90,15 @@
                 </div>
             </div>
 
-
             <div class="h2Container">
                 <h2 id = "Projects">Projects</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta at deleniti sit alias asperiores accusantium, placeat tempore eligendi cupiditate consequuntur! A aut vero pariatur excepturi repudiandae exercitationem atque quas possimus eius, officia accusantium deserunt at dolor fugit commodi laboriosam? Id ullam, repellendus accusantium harum est voluptate sint provident magnam tenetur?</p>
+                <p>Below are a range of the projects I have completed. To see the code for these then please visit <a href = "https://github.com/B-Little99" target="_blank" id = "gitHub">my GitHub page.</a></p>
+                <div id="projectContainer"></div>
             </div>
 
             <div class="h2Container">
                 <h2 id = "Contact">Contact me</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta at deleniti sit alias asperiores accusantium, placeat tempore eligendi cupiditate consequuntur! A aut vero pariatur excepturi repudiandae exercitationem atque quas possimus eius, officia accusantium deserunt at dolor fugit commodi laboriosam? Id ullam, repellendus accusantium harum est voluptate sint provident magnam tenetur?</p>
+                <p>I hope my website has given you a glimpse into my capabilities / dedication to programming. If you want to reach out, feel free to contact me via email or phone.</p>
             </div>
         </div>
 
