Added the projects grid in HTML and CSS.

--- a/portal.html
+++ b/portal.html
@@ -92,8 +92,22 @@
 
             <div class="h2Container">
                 <h2 id = "Projects">Projects</h2>
-                <p>Below are a range of the projects I have completed. To see the code for these then please visit <a href = "https://github.com/B-Little99" target="_blank" id = "gitHub">my GitHub page.</a></p>
-                <div id="projectContainer"></div>
+                <p>Below are some of the projects I have completed. To see other projects and code for the below please visit <a href = "https://github.com/B-Little99" target="_blank" id = "gitHub">my GitHub page.</a></p>
+                <div id="projectContainer">
+                    <div id="img1">
+                        <p></p>
+                        <img src="Calculator.png" alt="Calculator project image" class = "projectImg">
+                    </div>
+                    <div id="img2">
+                        <img src="EtchASketch.png" alt="Etch a Sketch project image" class = "projectImg">
+                    </div>
+                    <div id="img3">
+                        <img src="MortgageCalculator.png" alt="Mortgage Calculator project image" class = "projectImg">
+                    </div>
+                    <div id="img4">
+                        <img src="TicTacToe.png" alt="Tic Tac Toe project image" class = "projectImg">
+                    </div>
+                </div>
             </div>
 
             <div class="h2Container">
