Added the ability to move the user to the portal page once correctly logged in. Added the JavaScript to create a personalised method at the begginning. Added the footer in HTML and CSS.

--- a/portal.html
+++ b/portal.html
@@ -24,7 +24,8 @@
         <div id="fullContainer">
     
             <div id="introContainer">
-                <h1>Welcome to my website! This is intended to show off my new skills as a self taught developer. I have created this website from scratch and intend to keep expanding it.</h2>
+                <h1 id = "introName"></h1>
+                <h1>This is intended to show off my new skills as a self taught developer. I have created this website from scratch and intend to keep expanding it.</h1>
             </div>
 
             <div class="h2Container">
@@ -111,16 +112,16 @@
             </div>
 
             <div class="h2Container">
-                <h2 id = "Contact">Contact me</h2>
-                <p>I hope my website has given you a glimpse into my capabilities / dedication to programming. If you want to reach out, feel free to contact me via email or phone.</p>
             </div>
         </div>
 
-
-        <footer>
-
-        </footer>
-
+        <div id="footerContainer">
+            <footer>
+                <h2 id = "Contact">Contact me</h2>
+                <p>I hope my website has given you a glimpse into my capabilities / dedication to programming. If you want to reach out, feel free to contact me via <a href="mailto:brandonlittle2406@gmail.com?subject=Enquiry from your website." target="_blank" class = "footerLink">my email </a> or follow my <a href = "https://github.com/B-Little99" target="_blank" class = "footerLink">Github</a> to see my latest projects.</p>
+            </footer>
+            <p id = "attribution">Attribution for the icons used in the languages are to Font Awesome. The lisence is <a href="https://fontawesome.com/license/free" target="_blank" class = "footerLink">here.</a></p>
+        </div>
         <script src="portal.js" async></script>
     </body>
 </html>
