--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div id="loginContainer">
                 <h2>Welcome!</h2>
                 <p>Please enter your name and a password <br> between 8 and 20 characters long.</p>
-                <form id = "Form" action="" method = "GET">
+                <form id = "Form" action="portal.html" method = "GET">
                     <label id = "nameLabel" for="Name" > 
                         Name 
                     </label> 
